package logic

import "mall-go/app/merchants/cmd/pb"

type MerchantsLogic struct {
}

func (l *MerchantsLogic) JoinMerchant(in *pb.JoinMerchantRequest) (bool, error) {
	// TODO
	return false, nil
}

func (l *MerchantsLogic) UpdateMerchant(in *pb.UpdateMerchantRequest) (bool, error) {
	// TODO
	return false, nil
}

func (l *MerchantsLogic) CloseMerchant(in *pb.CloseMerchantRequest) (bool, error) {
	// TODO
	return false, nil
}
